Fix work grid to auto (responsive improvement), add nowrap

--- a/styles-conference/assets/stylesheets/styles.css
+++ b/styles-conference/assets/stylesheets/styles.css
@@ -139,7 +139,7 @@ li {
 
 #work {
   display: grid;
-  grid-template-rows: repeat(4, 652px);
+  grid-template-rows: repeat(4, auto);
 }
 
 .card {
@@ -150,8 +150,8 @@ li {
   margin-left: 24px;
   margin-right: 24px;
   margin-top: 80px;
-  height: 572px;
-  border-radius: 5%;
+  height: auto;
+  border-radius: 7vw;
   border: 1px solid #dfe1e6;
 }
 
@@ -181,6 +181,7 @@ li {
   gap: 8px;
   font-size: 12px;
   padding: 1px;
+  padding-right: 14px;
 }
 
 .canopy,
@@ -198,6 +199,7 @@ li {
 
 .text_li {
   color: #7a869a;
+  white-space: nowrap;
 }
 
 .description {
@@ -425,6 +427,11 @@ textarea {
   background-color: white;
 }
 
+.card_image {
+  width: 100%;
+  height: auto;
+}
+
 @media screen and (min-device-width: 768px) {
   .content {
     width: 67%;
@@ -450,11 +457,6 @@ textarea {
     grid-template-columns: 1fr 1fr;
     height: auto;
     border-radius: 2vw;
-  }
-
-  .card_image {
-    width: 100%;
-    height: auto;
   }
 
   #tonic1 {
